--- a/views/dashboard/dashboard.jade
+++ b/views/dashboard/dashboard.jade
@@ -1,4 +1,4 @@
-include header
+include ../header
 title SearchNTalk - DashBoard
 .navigation
     .container
@@ -152,4 +152,4 @@ title SearchNTalk - DashBoard
                                 h5 Experience
                                 h1 5 yrs.
             // /.content
-include footer
+include ../footer
