--- a/views/dashboard/login.jade
+++ b/views/dashboard/login.jade
@@ -1,5 +1,4 @@
-include header
-include ../scriptsAndStyles
+include ../header
 title SearchNTalk - Login
 .container-fluid
     .row-fluid
@@ -22,5 +21,5 @@ title SearchNTalk - Login
                         a.btn.btn-link(href=DashboardUrls.forgotPassword()) Forgot password?
                         a.btn-primary.btn(href=DashboardUrls.linkedInLogin()) Login with LinkedIn
     .col-md-2
-include footer
+include ../footer
 script(src='/js/app/dashboard/login.js')
