--- a/views/dashboard/memberProfile.jade
+++ b/views/dashboard/memberProfile.jade
@@ -1,4 +1,4 @@
-include header
+include ../header
 title SNT-#{formatName(user.first_name, user.last_name)} | Profile
 .matter
     .container
@@ -58,4 +58,4 @@ title SNT-#{formatName(user.first_name, user.last_name)} | Profile
                                         strong $1.00
                                         | /min.
             // /.content
-include footer
+include ../footer
