--- a/views/header.jade
+++ b/views/header.jade
@@ -1,23 +1,60 @@
-doctype html
+doctype !!!
 head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=false')
+
     link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
-    link(href='/css/bootstrap.min.css', rel='stylesheet')
+    link(href='/bower_dependencies/bootstrap/dist/css/bootstrap.css', rel='stylesheet')
+    link(href='/bower_dependencies/bootstrapValidator/dist/css/bootstrapValidator.css', rel='stylesheet')
+    link(href='/bower_dependencies/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css', rel='stylesheet')
     link(href='/css/main.css', rel='stylesheet')
-    //link(href='/css/style.css', rel='stylesheet')
-    script(src='/js/lib/combined.js')
+
+    //if lt IE 9
+      script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
+      script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
+    script(src='/bower_dependencies/jquery/jquery.js')
+    script(src='/bower_dependencies/bootstrap/dist/js/bootstrap.js')
+    script(src='/bower_dependencies/bootstrapValidator/dist/js/bootstrapValidator.js')
+    script(src='/bower_dependencies/bootbox/bootbox.js')
+    script(src='/bower_dependencies/underscore/underscore.js')
+    script(src='/bower_dependencies/moment/moment.js')
+    script(src='/bower_dependencies/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js')
+
+    script(src='/js/app/common.js')
+
+    script.
+        $(document).ready(function() {
+            $(".user-control").hover(function() { $(".user-control .user-modal").show(); } , function() { $(".user-control .user-modal").hide(); });
+        });
+
 .masthead(role='banner')
     .container
         .masthead-brand
             a.logo.hidden-xs(href='#')
             a.icon.visible-xs(href='#')
         .masthead-controls
-            .masthead-control-field
-                .field-label
-                    | Language
-                .field-menu
-                    select(name='ui_language')
-                        option(value='en', selected='')
-                            | English
+            if loggedInUser
+                .masthead-control-field.user-control
+                    .info
+                        .field-label
+                            | Logged In
+                        .field-info
+                            | #{formatName(loggedInUser.first_name, loggedInUser.last_name)}
+                    .avatar.avatar-small
+                        .shadow
+                        .placeholder
+                        img(src=ApiUrlDelegate.userProfilePicture(loggedInUser.id))
+                        .caret
+                    .user-modal(style='display: none;')
+                        .field-label
+                            | Language
+                        .field-menu
+                            select(name='ui_language')
+                                option(value='en', selected='')
+                                    | English
+                        ul
+                            li
+                                a.btn.btn-primary(href=DashboardUrls.logout()) Logout
+            .clearer
+        .clearer
