--- a/views/dashboard/header.jade
+++ b/views/dashboard/header.jade
@@ -23,6 +23,10 @@ head
 
     script(src='/js/app/common.js')
 
+    script(src='/js/lib/bootstrap3-typeahead.js')
+    script(src='/js/lib/bloodhound.js')
+    script(src='/js/lib/moment.js')
+
     script.
         $(document).ready(function() {
             $(".user-control").hover(function() { $(".user-control .user-modal").show(); } , function() { $(".user-control .user-modal").hide(); });
