--- a/views/dashboard/userSchedule.jade
+++ b/views/dashboard/userSchedule.jade
@@ -23,42 +23,47 @@ div.matter
             div.content.col-md-8
                 div.row
                     div.card#schedule
-                        for rule in rules
-                            - var daysOfWeek = rule.values[5];
-                            - var hour = rule.values[2];
-                            - var minutes = rule.values[1];
-                            div.schedule
-                                div.item
-                                    div.row
-                                        h5.col-xs-8= rule.title
-                                        div.header-link.col-xs-4
-                                            a.btn.btn-primary.editScheduleBtn(data-id=rule.id)
-                                                i.icon-pencil
-                                    div.schedule-details
-                                        div.schedule-days.col-sm-6
-                                            h3 Days:
-                                            ul.nav.nav-pills
-                                                li(class="#{daysOfWeek.indexOf('0') != -1 ? 'active' : ''}")
-                                                    p.well S
-                                                li(class="#{daysOfWeek.indexOf('1') != -1 ? 'active' : ''}")
-                                                    p.well M
-                                                li(class="#{daysOfWeek.indexOf('2') != -1 ? 'active' : ''}")
-                                                    p.well T
-                                                li(class="#{daysOfWeek.indexOf('3') != -1 ? 'active' : ''}")
-                                                    p.well W
-                                                li(class="#{daysOfWeek.indexOf('4') != -1 ? 'active' : ''}")
-                                                    p.well T
-                                                li(class="#{daysOfWeek.indexOf('5') != -1 ? 'active' : ''}")
-                                                    p.well F
-                                                li(class="#{daysOfWeek.indexOf('6') != -1 ? 'active' : ''}")
-                                                    p.well S
-                                        div.schedule-time.col-sm-6
-                                            h3 Time:
-                                            h1
-                                                span= moment().hour(hour).minute(minutes).format('hh:mm a')
-                                                em &nbsp;to&nbsp;
-                                                span= moment().hour(hour).minute(minutes).add({milliseconds: rule.duration}).format('hh:mm a')
-                                div.clearer
+                        .header
+                            .title
+                                h1 Schedules
+                            .clearer
+                        .item
+                            for rule in rules
+                                - var daysOfWeek = rule.values[5];
+                                - var hour = rule.values[2];
+                                - var minutes = rule.values[1];
+                                div.schedule
+                                    div.item
+                                        div.row
+                                            h5.col-xs-8= rule.title
+                                            div.header-link.col-xs-4
+                                                a.btn.btn-primary.editScheduleBtn(data-id=rule.id)
+                                                    i.icon-pencil
+                                        div.schedule-details
+                                            div.schedule-days.col-sm-6
+                                                h3 Days:
+                                                ul.nav.nav-pills
+                                                    li(class="#{daysOfWeek.indexOf('0') != -1 ? 'active' : ''}")
+                                                        p.well S
+                                                    li(class="#{daysOfWeek.indexOf('1') != -1 ? 'active' : ''}")
+                                                        p.well M
+                                                    li(class="#{daysOfWeek.indexOf('2') != -1 ? 'active' : ''}")
+                                                        p.well T
+                                                    li(class="#{daysOfWeek.indexOf('3') != -1 ? 'active' : ''}")
+                                                        p.well W
+                                                    li(class="#{daysOfWeek.indexOf('4') != -1 ? 'active' : ''}")
+                                                        p.well T
+                                                    li(class="#{daysOfWeek.indexOf('5') != -1 ? 'active' : ''}")
+                                                        p.well F
+                                                    li(class="#{daysOfWeek.indexOf('6') != -1 ? 'active' : ''}")
+                                                        p.well S
+                                            div.schedule-time.col-sm-6
+                                                h3 Time:
+                                                h1
+                                                    span= moment().hour(hour).minute(minutes).format('hh:mm a')
+                                                    em &nbsp;to&nbsp;
+                                                    span= moment().hour(hour).minute(minutes).add({milliseconds: rule.duration}).format('hh:mm a')
+                                    div.clearer
                         div.addit
                             a#createScheduleBtn(href='javascript:void(0)')
                                 | Add a schedule
@@ -100,6 +105,34 @@ div.matter
                             p.edit-schedules
                                 | Editing Schedule
                                 a.btn.btn-primary.done-editing-schedules(href='javascript:void(0)') Done
+                    .card
+                        .header
+                            .title
+                                h1 Pricing
+                            .clearer
+                        .item
+                            .row
+                                h3 Pulse Rate
+                                .form-group
+                                    select.form-control
+                                        option(value='1') 1 min.
+                                        option(value='15') 15 mins.
+                                        option(value='30') 30 mins.
+                                        option(value='45') 45 mins.
+                                        option(value='60') 60 mins.
+                                h3 Amount
+                                .form-group
+                                    .input-group
+                                        input(type='text').form-control
+                                        .input-group-btn
+                                            select.form-control
+                                                option $
+                                                option Rs.
+                                                option Points
+                                h3 Minimum duration (mins.)
+                                .form-group
+                                    input(type='text', placeholder='0').form-control
+
 include ../footer
 script.
     var rules = JSON.parse('!{JSON.stringify(rules)}');
