--- a/views/callFlow/index.jade
+++ b/views/callFlow/index.jade
@@ -1,4 +1,5 @@
 - var user = expert.user;
+- var pricing = expert.user.pricing_scheme[0]
 - var minDuration = pricing.min_duration
 title ST-#{formatName(user.first_name, user.last_name, user.title)}
 include ../header
@@ -34,7 +35,18 @@ include ../header
                             p.floatright
                                 if pricing
                                     strong= formatMoney(pricing.charging_rate, pricing.unit)
-                                    | /min.
+                                    if pricing.chunk_size > 1
+                                        | &nbsp;for&nbsp;
+                                        span= pricing.chunk_size
+                                        | &nbsp;mins.
+                                    else
+                                        | &nbsp;/ min.
+                                    if pricing.min_duration > 0
+                                        .pull-right
+                                            .small
+                                                | &nbsp;(minimum &nbsp;
+                                                span= pricing.min_duration
+                                                | &nbsp;mins.)
                                 else
                                     strong Free
                 .schedule-options
