Login button in headdr

--- a/views/header.jade
+++ b/views/header.jade
@@ -58,6 +58,6 @@ head
                                 a.btn.btn-primary(href=DashboardUrls.logout()) Logout
             else
                 .masthead-control-field.user-control
-                    a.btn.btn-primary Login
+                    a.btn.btn-primary(href=DashboardUrls.login()) Login
             .clearer
         .clearer
